Fix a layout bug which cause x-axis scroll bar appear.

--- a/src/styleSheets/components/app.less
+++ b/src/styleSheets/components/app.less
@@ -40,6 +40,7 @@ body {
             height: 100%;
             display: flex;
             flex-direction: row;
+            overflow-x: hidden;
             .fs-main-wrapper {
                 flex: 1;
                 border-top: 1px solid @light-border;
